--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,28 +1,27 @@
 #root {
-  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: #242e30;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Helvetica , Arial, sans-serif ;
   background-color: #F5F3F1;
 }
 
 .restaurants{
   display: flex;
   justify-content: space-evenly;
-  gap: 20px;
+  gap: 1rem;
   flex-wrap: wrap;
 }
 
 .restaurant {
-  border: 2px solid #ff7f00;
+  border: 4px solid #ff7f00;
   border-radius: 15px;
   background-color: #C1DADE ;
   width: 400px;
-  margin-bottom: 20px;
   padding: 10px;
   text-align: left;
 }
